[package]
name = "cargo-intern"
version = "1.0.0"
edition = "2021"
description = "Cargo subcommand for downloading crate sources"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>", "Patrick McCormick patm.mail@gmail.com"]
keywords = ["cargo", "subcommand", "download", "fetch", "intern"]
license = "MIT"
readme = "README.md"
categories = ["development-tools", "development-tools::cargo-plugins"]
documentation = "https://docs.rs/cargo-download"
homepage = "https://github.com/pmmccorm/cargo-intern"
repository = "https://github.com/pmmccorm/cargo-intern.git"

[[bin]]
name = "cargo-intern"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
conv = "0.3"
derive-error = "0.0.3"
exitcode = "1.1.2"
flate2 = "0.2"
itertools = "0.6"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
semver = "0.9"
serde_json = "1.0.96"
tar = "0.4.38"
